--- a/src/app/alumno/pages/academico/calendar/calendar.component.html
+++ b/src/app/alumno/pages/academico/calendar/calendar.component.html
@@ -1,3 +1,3 @@
 <div class="mx-2" *ngIf="data">
-    <full-calendar *ngIf="data.length>0" [options]="calendarOptions" style="height: 100% !important;"></full-calendar>
+    <full-calendar [options]="calendarOptions" style="height: 100% !important;"></full-calendar>
 </div>
