--- a/src/app/ventas/pages/registro/leads/leads.component.html
+++ b/src/app/ventas/pages/registro/leads/leads.component.html
@@ -327,6 +327,19 @@
         <div class="card-body modal-body">
             <div class="row was-validated mb-3">
                 <div class="col-md-12 col-sm-12 col-lg-12">
+                    <div class="form-group position-relative mb-2">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-book"></i></span>
+                            <div class="form-floating">
+                                <select (change)="selectSeguimiento($event)" class="form-select border-start-0" formControlName="estado" required>
+                                    <option value="" disabled selected>Seleccionar Estado</option>
+                                    <option *ngFor="let valSeg of estado_seg" class="text-uppercase" value="{{valSeg.id}}">
+                                        {{valSeg.name}}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
                     <div class="form-group mb-2 position-relative" *ngIf="date_seguimiento">
                         <div class="input-group input-group-lg">
                             <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-calendar"></i></span>
