--- a/src/app/marketing/pages/reciclaje/leads/leads.component.html
+++ b/src/app/marketing/pages/reciclaje/leads/leads.component.html
@@ -43,6 +43,14 @@
             <ng-template #is_vendedor let-data="adtData" let-emitter="captureEvents">
                 <p>{{data.vendedor.detail_user.nombres}} {{data.vendedor.detail_user.apellidos}}</p>
             </ng-template>
+            <ng-template #is_check let-data="adtData" let-emitter="captureEvents">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      Default checkbox
+                    </label>
+                </div>
+            </ng-template>
             <ng-template #dtActions let-data="adtData" let-emitter="captureEvents">
                 <app-buttons-leads [actions]="dataTableActions" [data]="data" (emitter)="emitter($event)"></app-buttons-leads>
             </ng-template>
@@ -51,6 +59,32 @@
         </div>
     </div>
 </div>
+<button class="floating-btn" (click)="selectSeller()">
+    <i class="bi bi-plus-lg"></i> <!-- Ícono opcional -->
+</button>
+<!-- Modal Leads-->
+<ng-template #modal_control let-modal>
+    <div class="card border-0 border-left-5 border-theme bg-gradient-theme-light">
+        <div class="card-header">
+            <h5 class="mb-1">No Asignados Vendedor</h5>
+            <p class="text-secondary title">N° Documentos Repetidos</p>
+        </div>
+        <div class="card-body modal-body">
+            <div class="row">
+                <div class="col-12 col-md-12 mb-2 text-center" *ngFor="let data of repetidos">
+                    <h3><span class="badge bg-primary">{{data}}</span></h3>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            <div class="row">
+                <div class="col-auto">
+                    <button class="btn btn-sm btn-danger text-light mx-3" (click)="closeModal()">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</ng-template>
 <!-- SPINNER -->
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "triangle-skew-spin">
     <p style="color: white" > Cargando... </p>
