--- a/src/app/ventas/pages/panel/panel.component.html
+++ b/src/app/ventas/pages/panel/panel.component.html
@@ -387,3 +387,7 @@
         </div>
     </div> -->
 </div>
+<!-- SPINNER -->
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "triangle-skew-spin">
+    <p style="color: white" > Cargando... </p>
+</ngx-spinner>
